--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -10,5 +10,6 @@ gem "pry", "~> 0.14"
 gem "rake", "~> 13"
 gem "rspec", "~> 3"
 gem "rspec_junit_formatter", "~> 0.4"
+gem "yard", "~> 0.9"
 
 gem "standard", require: false
