--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -11,5 +11,6 @@ gem "rake", "~> 13"
 gem "rspec", "~> 3"
 gem "rspec_junit_formatter", "~> 0.4"
 gem "yard", "~> 0.9"
+gem "activerecord", "~> 6.1"
 
 gem "standard", require: false
