Add PostgreSQL support for deadline propagation (#5)
Implement wrappers for `PG::Connection` which make use of `ruby-pg`/`libpq`'s
async APIs in order to set timeouts/deadlines based on `Shed.time_left_ms`.

This replicates the methodology used by Go drivers such as `jackc/pgconn` or
`lib/pq` to propagated `context.Context` cancellations, sending a cancel signal
to PG which kills the query and leaves the connection available for use again.

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,6 +18,16 @@ jobs:
           5s --health-retries 5
         ports:
         - 3306:3306
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: runner
+          POSTGRES_DB: shed_test
+          POSTGRES_PASSWORD: postgres
+        options: "--health-cmd pg_isready --health-interval 10s --health-timeout 5s
+          --health-retries 5"
+        ports:
+        - 5432:5432
     strategy:
       fail-fast: false
       matrix:
